# sovereign-alpha

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: HARDWARE_ARRIVAL_DAY.md  architecture.md
docs/adr/: 0001-polars-over-pandas.md  0002-as-of-join-only.md  0003-zmq-messagepack-bridge.md  0004-pydantic-pandera-split.md  0005-content-addressed-caching.md  0006-single-node-no-cloud.md  0007-synthetic-ledger-first-class.md  0008-toml-personas.md  README.md
modules/: __init__.py
modules/module_1_extraction/: __init__.py  bootstrap_universe.py  synthetic_ledger.py
modules/module_2_quant/: __init__.py  backtest.py  baselines.py  counterfactual.py  cursor.py  friction.py  fusion.py  metrics.py  multi_agent.py  statistics.py  strategy.py  synthetic_ohlcv.py  tournament.py  validation.py
modules/module_3_twin/: __init__.py  messages.py  publisher.py  transport.py
scripts/: bootstrap_test.py
shared/: __init__.py
tests/: leak_corpus.py  test_backtest.py  test_baselines.py  test_bls.py  test_contracts.py  test_counterfactual.py  test_cursor.py  test_edgar.py  test_firewall_properties.py  test_fomc.py  test_friction.py  test_fusion.py  test_gdelt.py  test_inference.py  test_messages.py  test_metrics.py  test_multi_agent.py  test_personas.py  test_publisher.py  test_run_manifest.py  test_schema_alpha_ledger.py  test_smoke.py  test_statistics.py  test_strategy.py  test_synthetic_ledger.py  test_synthetic_ohlcv.py  test_temporal_firewall.py  test_tokenization.py  test_tournament.py  test_transport.py  test_validation.py
(+26 files in other folders)
