[project]
name = "sovereign-alpha"
version = "0.0.1"
description = "Deterministic local-only historical market simulation framework — LLM semantic alpha extraction, vectorized backtests, and UE5 digital twin visualization."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "Sovereign Alpha" }]
dependencies = [
    "polars>=1.0",
    "pyarrow>=18",
    "pydantic>=2.9",
    "pyzmq>=26",
    "msgpack>=1.1",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "hypothesis>=6.100",
    "ruff>=0.7",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["modules", "shared"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.mypy]
python_version = "3.12"
strict = true
